methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:6: error: not found: value face_case_verte
      return face_case_verte
             ^SlugTracking:7: error: not found: value face_case_vide
    return face_case_vide
           ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
    if (getCouleurSol()==Color.green){
    ^