methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    avance()
  	if (getCouleurSol()==Color.green){
      recule()
      return face_case_verte
    return face_case_vide
    }
}